<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/custom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view" />

        <Button
            android:id="@+id/table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_layout" />

        <Button
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frame_layout" />

        <Button
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_layout" />

        <Button
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view" />

        <Button
            android:id="@+id/advanced_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_text_view" />

        <Button
            android:id="@+id/edit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_view" />

        <Button
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_button" />

        <Button
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock" />

        <Button
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chronometer" />

        <Button
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_view" />

        <Button
            android:id="@+id/quick_contact_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_contact_badge" />

        <Button
            android:id="@+id/list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_view" />

        <Button
            android:id="@+id/auto_complete_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_complete_text_view" />

        <Button
            android:id="@+id/grid_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_view" />

        <Button
            android:id="@+id/expandable_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expandable_list_view" />

        <Button
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/adapter_view_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_view_flipper" />

        <Button
            android:id="@+id/stack_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stack_view" />

        <Button
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress" />

    </LinearLayout>

</ScrollView>

